# cymseed3

./: .gitignore  MANIFEST.in  README.md  cymseed3.pxd  cymseed3.pyx  example.py  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-tests.yml
cymseed3/: libmseed.c  libmseed.pxd  libmseed.pyx
cymseed3/EarthScope/: Makefile.mod
earthscope/libmseed-3.1.3/: msio.c
test/: test_libmseed.py
