[build-system]
requires = ["setuptools>=42", "wheel", "cython>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "cymseed3"
version = "0.0.5"
description = "A Python package for reading and writing miniseed files using libmseed 3."
authors = [
    { name = "Valerio Poggi", email = "vpoggi@ogs.it" }
]
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.6"
keywords = ["miniseed", "libmseed", "seismic", "data", "processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering"
]

[project.urls]
"Homepage" = "https://github.com/shakelab/cymseed3"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
